--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/academic"]
 	path = themes/academic
 	url = https://github.com/gcushen/hugo-academic.git
+[submodule "s-mishra.github.io"]
+	path = s-mishra.github.io
+	url = https://github.com/s-mishra/s-mishra.github.io.git
+	branch = master
