--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -16,7 +16,7 @@
 [[main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 40
+  weight = 50
 
 [[main]]
   name = "Publications"
@@ -24,13 +24,18 @@
   weight = 30
 
 [[main]]
+  name = "Grants"
+  url = "#grants"
+  weight = 40
+
+[[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
 [[main]]
   name = "CV"
   url = "files/cv.pdf"
-  weight = 50
+  weight = 60
